# doubter

./: .travis.yml  Cargo.toml  README.md  Rakefile  aliases.js  changelog.md  index.html  search-index.js
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: doc.yml  test.yml
bytecount/: all.html  fn.count.html  fn.naive_count.html  fn.naive_count_32.html  fn.naive_num_chars.html  fn.num_chars.html  index.html
crates/docs/: gettint-started.md
crates/doctest/: Cargo.toml  lib.rs
crates/doctest-edition2018/: Cargo.toml  Cargo.toml.patch  lib.rs
crates/doctest-extract/: Cargo.toml  foo.md  lib.rs
crates/doctest-nightly/: Cargo.toml  lib.rs
crates/doctest-script/: Cargo.toml  README.md  build.rs  foo.md  lib.rs
crates/doctest/doc/: with whitespace.md
doubter/: Cargo.toml  all.html  enum.Mode.html  fn.generate_doc_tests.html  index.html  lib.rs  macro.generate_doc_tests!.html  macro.generate_doc_tests.html  sidebar-items.js  struct.Config.html
doubter-impl/: Cargo.toml  lib.rs
doubter-impl/src/: config.rs  generate.rs  lib.rs  markdown.rs  parsing.rs  render.rs  tree.rs  util.rs
doubter-macros/: Cargo.toml  lib.rs
doubter_impl/: all.html  index.html  sidebar-items.js
doubter_impl/config/: enum.Mode.html  struct.Config.html
doubter_impl/public/: enum.Mode.html  fn.generate_doc_tests.html  generate_doc_tests.v.html  index.html  sidebar-items.js  struct.Config.html
doubter_macros/: all.html  fn.generate_doc_tests_impl.html  generate_doc_tests_impl.v.html  index.html  sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/iter/traits/: trait.Extend.js  trait.FromIterator.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/ops/arith/: trait.Sub.js  trait.SubAssign.js
implementors/core/str/: trait.FromStr.js
implementors/std/error/: trait.Error.js
implementors/syn/parse/: trait.Parse.js
proc_macro_hack/: index.html  macro.proc_macro_expr_decl.html  macro.proc_macro_expr_impl.html  macro.proc_macro_item_decl.html  macro.proc_macro_item_impl.html
pulldown_cmark/: all.html  constant.OPTION_ENABLE_FOOTNOTES.html  constant.OPTION_ENABLE_TABLES.html  enum.Alignment.html  enum.Event.html  enum.Tag.html  index.html  struct.Options.html  struct.Parser.html
pulldown_cmark/html/: fn.push_html.html  index.html
src/: extract.rs  lib.rs  render.rs  tree.rs  util.rs
src/bytecount/: lib.rs.html
src/doubter/: lib.rs.html
src/doubter_impl/: config.rs.html  extract.rs.html  lib.rs.html  render.rs.html  tree.rs.html  util.rs.html
src/doubter_macros/: lib.rs.html
src/proc_macro_hack/: lib.rs.html
src/proc_macro_hack_impl/: lib.rs.html
src/pulldown_cmark/: entities.rs.html  escape.rs.html  html.rs.html  lib.rs.html  parse.rs.html  passes.rs.html  puncttable.rs.html  scanners.rs.html  utils.rs.html
src/syn/: file.rs.html  item.rs.html  tt.rs.html
syn/: all.html  enum.AttrStyle.html  enum.BareFnArgName.html  enum.BinOp.html  enum.Expr.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericArgument.html  enum.GenericMethodArgument.html  enum.GenericParam.html  enum.ImplItem.html  enum.Item.html  enum.Lit.html  enum.Member.html  enum.Meta.html  enum.NestedMeta.html  enum.Pat.html  enum.PathArguments.html  enum.RangeLimits.html  enum.ReturnType.html  enum.Stmt.html  enum.TraitBoundModifier.html  enum.TraitItem.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.UseTree.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse_file.html  index.html  struct.Abi.html  struct.AngleBracketedGenericArguments.html  struct.ArgCaptured.html  struct.ArgSelf.html  struct.ArgSelfRef.html  struct.Arm.html  struct.Attribute.html  struct.BareFnArg.html  struct.Binding.html  (+154 more)
syn/parse/: trait.Parse.html
syn/punctuated/: struct.Punctuated.html
syn/token/: struct.Abstract.html  struct.Add.html  struct.AddEq.html  struct.And.html  struct.AndAnd.html  struct.AndEq.html  struct.As.html  struct.Async.html  struct.At.html  struct.Auto.html  struct.Bang.html  struct.Become.html  struct.Box.html  struct.Brace.html  struct.Bracket.html  struct.Break.html  struct.CapSelf.html  struct.Caret.html  struct.CaretEq.html  struct.Colon.html  struct.Colon2.html  struct.Comma.html  struct.Const.html  struct.Continue.html  struct.Crate.html  struct.Default.html  struct.Div.html  struct.DivEq.html  struct.Do.html  struct.Dollar.html  struct.Dot.html  struct.Dot2.html  struct.Dot3.html  struct.DotDotEq.html  struct.Dyn.html  struct.Else.html  struct.Enum.html  struct.Eq.html  struct.EqEq.html  struct.Existential.html  (+63 more)
testcrate/: Cargo.toml
testcrate/doc/: the_answer.md
testcrate/src/: lib.rs
testcrates/test-doubter/: Cargo.toml
testcrates/test-doubter/src/: lib.rs
testcrates/test-with-external-doc/: Cargo.toml
testcrates/test-with-external-doc/doc/: the_answer.md
testcrates/test-with-external-doc/src/: lib.rs
