[package]
name = "dummy"
version = "0.0.0"
publish = false

[lib]
path = ".empty.rs"

[dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[workspace]
members = [
  "doubter",
  "doubter-impl",
  "doubter-macros",

  "crates/doctest",
  "crates/doctest-edition2018",
  "crates/doctest-extract",
  "crates/doctest-script",
  "crates/doctest-nightly",
]
