[package]
name = "doubter"
version = "0.2.0-dev"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT"
repository = "https://github.com/ubnt-intrepid/doubter.git"
description = "A helper crate for testing Rust code blocks in Markdown"
readme = "README.md"
edition = "2018"

include = [
  "/src/**/*.rs",
  "/tests/**/*.rs",
  "/examples/**/*.rs",
  "/benches/**/*.rs",
  "/build.rs",
  "/lib.rs",
  "/Cargo.toml",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full", "extra-traits"] }
proc-macro2 = "0.4.20"
quote = "0.6"

bytecount = "0.3.2"
glob = "0.2.11"
pulldown-cmark = { version = "0.1.2", default-features = false }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[workspace]
members = [
  ".",

  "crates/doctest",
  "crates/doctest-extract",
  "crates/doctest-nightly",
]
