[package]
name = "doubter-impl"
version = "0.0.4"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT"
repository = "https://github.com/ubnt-intrepid/doubter.git"
description = "Procedural macros for doubter"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.4"
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4.20"

[features]
external-doc = []
