[package]
name = "doubter-macros"
version = "0.0.6"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT"
repository = "https://github.com/ubnt-intrepid/doubter.git"
description = "Procedural macros for doubter"

[lib]
name = "doubter_macros"
path = "lib.rs"
proc-macro = true

[dependencies]
doubter-impl = { version = "0.0.6", path = "../doubter-impl" }
proc-macro-hack = { version = "0.4", optional = true }
proc-macro2 = "0.4.20"

[features]
default = ["proc-macro-hack"]
