[package]
name = "doubter-macros"
version = "0.2.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT"
repository = "https://github.com/ubnt-intrepid/doubter.git"
description = "Procedural macros for doubter"
edition = "2018"

[lib]
name = "doubter_macros"
path = "lib.rs"
proc-macro = true

[dependencies]
doubter-impl = { version = "=0.2.0-dev", path = "../doubter-impl" }
proc-macro2 = "0.4.20"
