[package]
name = "doubter"
version = "0.0.6"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT"
repository = "https://github.com/ubnt-intrepid/doubter.git"
description = "A helper crate for testing Rust code blocks in Markdown"
readme = "../README.md"

include = [
  "/src/**/*.rs",
  "/tests/**/*.rs",
  "/examples/**/*.rs",
  "/benches/**/*.rs",
  "/build.rs",
  "/Cargo.toml",
]

[lib]
name = "doubter"
path = "lib.rs"

[dependencies]
proc-macro-hack = { version = "0.4", optional = true }
doubter-impl = { version = "0.0.6", path = "../doubter-impl" }
doubter-macros = { version = "0.0.6", path = "../doubter-macros" }

[features]
default = ["hack"]

# uses `proc-macro-hack` to define the procedural macro using only Macros 1.1.
hack = ["proc-macro-hack", "doubter-macros/proc-macro-hack"]
