[package]
name = "doubter"
version = "0.2.0-dev"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT"
repository = "https://github.com/ubnt-intrepid/doubter.git"
description = "A helper crate for testing Rust code blocks in Markdown"
readme = "../README.md"
edition = "2018"

include = [
  "/src/**/*.rs",
  "/tests/**/*.rs",
  "/examples/**/*.rs",
  "/benches/**/*.rs",
  "/build.rs",
  "/lib.rs",
  "/Cargo.toml",
]

[lib]
name = "doubter"
path = "lib.rs"

[dependencies]
doubter-impl = { version = "=0.2.0-dev", path = "../doubter-impl" }
doubter-macros = { version = "=0.2.0-dev", path = "../doubter-macros" }
