[package]
name = "doctest-script"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false
edition = "2018"

build = "build.rs"

[lib]
name = "doctest"
path = "lib.rs"
doc = false

[build-dependencies]
doubter = { path = "../../doubter" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
